# GameOfLife

./: CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  README.md  RectBuffer.cpp  RectBuffer.h  Window.cpp  Window.h  main.cpp
core/: Core.cpp  Core.h  CoreExtension.cpp  CoreExtension.h  CoreRenderer.cpp  CoreRenderer.h  CoreSelector.cpp  CoreSelector.h
ui/: Character.cpp  Character.h  Font.cpp  Font.h  GPS.cpp  GPS.h  Settings.h  characterSet.h
